fix: main section overflow not show scroll
closed #10

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,13 +135,6 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-/* Make sure the footer is always at the bottom */
-main {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
-
 /* Animation for dialog */
 @keyframes fadeIn {
     from {
@@ -171,13 +164,6 @@ html,
 body {
     height: 100%;
     overflow: hidden;
-}
-
-#__next,
-main {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .category-nav {
